--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     
 </body>
-<script src="boolean.js"></script>
+<!-- <script src="boolean.js"></script> -->
 <!-- <script src="conditional.js"></script> -->
-<!-- <script src="logicalOperator1.js"></script> -->
+<script src="logicalOperator1.js"></script>
 <!-- <script src="replaceString.js"></script> -->
 </html> 
