--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </body>
 <!-- <script src="boolean.js"></script> -->
 <!-- <script src="conditional.js"></script> -->
-<script src="logicalOperator1.js"></script>
-<!-- <script src="replaceString.js"></script> -->
+<!-- <script src="logicalOperator1.js"></script> -->
+<script src="replaceString.js"></script>
 </html> 
